Fix z-index issue with unclickable button

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,4 +1,5 @@
 footer {
+	z-index: 1;
 	display: flex;
 	align-items: center;
 	justify-content: center;
