--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,6 @@
 #home {
 	position: absolute;
-	z-index: -1;
+	z-index: 0;
 	min-height: 100vh;
 	min-width: 100vw;
 	display: flex;
